# avoutput-adaptation-layer-rpi

./: CMakeLists.txt  README.md
files/conf/: asound.conf  config.h.in  device-cap.json
files/pkgconfig/: aval-impl.pc.in
src/: device_capability.cpp  device_capability.h  libdrm_macros.h  logging.h
src/aval/: aval_audio_impl.cpp  aval_audio_impl.h  aval_impl.cpp  aval_impl.h  aval_settings_impl.cpp  aval_settings_impl.h  aval_video_impl.cpp  aval_video_impl.h  buffer.cpp  buffers.h  connector.cpp  deviceDiscovery.cpp  driElements.cpp  driElements.h  edid.h  utils.cpp
tests/: format.h  main.cpp  pattern.cpp  pattern.h
